# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: logic_calc.py  logic_even.py  logic_gcd.py  logic_prime.py  logic_progression.py  my_functions.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/src/: my_functions.py
